syntax = "proto3";
package trpc.shortvideo.interaction;

option go_package = "github.com/Yamon955/ShortVideo/protocol/interaction/pb";

service Interaction {
  rpc Like(LikeReq) returns (LikeRsp);
  rpc Follow(FollowReq) returns (FollowRsp);
  rpc Commit(CommitReq) returns (CommitRsp);
  rpc Report(ReportReq) returns (ReportRsp);
}

enum OPERATION_TYPES {
  UNKNOW = 0;
  DO = 1;   // 执行操作
  UNDO = 2; // 取消操作
}

enum REPORT_VIDEO_TYPES {
  UN_KNOW = 0;
  VIOLENCE = 1; // 暴力行为
  TERRORISM = 2; // 恐怖主义
  DISCRIMINATION = 3; // 歧视性内容
  SEXUAL_CONTENT = 4; // 色情
  MISINFORMATION = 5; // 虚假信息
  COPYRIGHT_INFRINGEMENT = 6; // 版权侵权
  CHILD_SAFETY = 7; // 未成年安全
  ANIMAL_CRUELTY = 8; // 虐待动物
  PRIVACY_VIOLATION = 9; // 侵犯隐私
  GRAPHIC_CONTENT = 10; // 引人不适
}

message LikeReq {
  OPERATION_TYPES operation_type = 1; // type=1 点赞，type=2 取消点赞
  uint64 vid = 2;
}

message LikeRsp {
  int64 status_code = 1;
  string status_msg = 2;
}

message FollowReq {
  OPERATION_TYPES operation_type = 1; // type=1 关注，type=2 取消关注
  uint64 uid = 2; // 要关注的用户 uid
}

message FollowRsp {
  int64 status_code = 1;
  string status_msg = 2;
}

message CommitReq {
  OPERATION_TYPES operation_type = 1; // type=1 评论，type=2 撤回评论
  uint64 vid = 2; // 评论的视频 vid
  string msg = 3; // 评论内容
}

message CommitRsp {
  int64 status_code = 1;
  string status_msg = 2;
}

message ReportReq {
  OPERATION_TYPES operation_type = 1; // type=1 举报，type=2 撤回举报
  uint64 uid = 2; // 举报者 uid
  uint64 report_vid = 3; // 被举报视频 vid
  string report_uid = 4; // 被举报者 uid
  repeated REPORT_VIDEO_TYPES report_types = 5; // 举报类型
  string ext_info = 6; // 举报者补充描述信息
}

message ReportRsp {
  int64 status_code = 1;
  string status_msg = 2;
}
